<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/lblTaskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_name"
        android:layout_marginStart="20dp"
        android:layout_alignBaseline="@+id/etEditText"
        android:layout_alignParentStart="true"
        android:labelFor="@+id/etEditText"/>

    <EditText
        android:id="@+id/etEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/lblTaskName"/>

    <TextView
        android:id="@+id/lblDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/due_date"
        android:layout_alignStart="@+id/lblTaskName"
        android:labelFor="@+id/datePicker"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/lblTaskName" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_below="@+id/etEditText"
        android:layout_marginTop="5dp"
        android:layout_alignStart="@+id/etEditText"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/lblTaskNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_note"
        android:layout_alignStart="@+id/lblTaskName"
        android:labelFor="@+id/etTaskNote"
        android:layout_below="@+id/datePicker"
        android:layout_alignBaseline="@+id/etEditNotes"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/etEditNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/datePicker"
        android:ems="10"
        android:inputType="textMultiLine"
        android:layout_marginTop="5dp"
        android:layout_alignEnd="@+id/datePicker"
        android:layout_alignStart="@+id/datePicker" />

    <TextView
        android:id="@+id/lblPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority"
        android:layout_alignStart="@+id/lblTaskName"
        android:labelFor="@+id/etTaskNote"
        android:layout_below="@+id/lblTaskNote"
        android:layout_marginTop="10dp"/>

    <Spinner
        android:id="@+id/spinnerPriority"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/etEditNotes"
        android:layout_alignStart="@+id/etEditText"
        android:layout_alignEnd="@+id/datePicker"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/lblStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:layout_alignStart="@+id/lblTaskName"
        android:labelFor="@+id/etTaskNote"
        android:layout_below="@+id/lblPriority"
        android:layout_marginTop="10dp"/>

    <Spinner
        android:id="@+id/spinnerStatus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/spinnerPriority"
        android:layout_alignStart="@+id/etEditText"
        android:layout_alignEnd="@+id/datePicker"
        android:layout_marginTop="5dp"/>
</RelativeLayout>